--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,6 @@ body {
   height: 560px;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid gray;
 }
 
 .word-item {
@@ -70,18 +69,85 @@ body {
 
 #key-input {
   margin-left: 10px;
-  font-size: 14px;
+  font-size: 18px;
   width: 200px;
   outline: none;
   height: 24px;
+  border: 0;
+  border-bottom: 1px solid black;
+  padding: 0;
+}
+
+#key-input:focus {
+  border-bottom: 2px solid #4C79A6;
 }
 
 .key-submit {
   margin-left: 10px;
   font-size: 14px;
-  padding: 4px 8px;
+  line-height: 20px;
+  padding: 4px 10px;
+  border: 1px solid transparent;
+  border-radius: 4px;
   cursor: pointer;
   background-color: lightgray;
+}
+
+.key-submit:hover {
+  border-color: gray;
+}
+
+.buttons-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  padding: 10px 18px;
+  background-color: lightgray;
+  cursor: pointer;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button:hover {
+  box-shadow: 0 0 2px black;
+}
+
+.buttons-container .button {
+  margin-left: 10px;
+}
+
+.buttons-container .button:first-child {
+  margin-left: 0;
+}
+
+.spymaster-toggle div {
+  margin-left: 8px;
+}
+
+.team1.revealed,
+.spymaster .team1 {
+  background-color: #4C79A6;
+}
+
+.team2.revealed,
+.spymaster .team2 {
+  background-color: #FF4C4C;
+}
+
+.assassin.revealed,
+.spymaster .assassin {
+  background-color: #ffcc00;
+}
+
+.neutral.revealed,
+.spymaster .neutral {
+  background-color: gray;
 }
 
 .unselectable {
